[package]
name = "librb-http"
version = "0.1.0"
authors = ["Diego Fernández Barrera <bigomby@gmail.com>"]

[lib]
name = "rbhttp"
crate-type = ["cdylib"]

[build-dependencies]
gcc = "0.3.51"

[dependencies]
libc = "0.2.23"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
bytes = "0.4"
log = "0.3.8"
